@startuml

interface Sensor {
}
class HumiditySensor {
}
interface Value {
}
class HumidityValue  {
}
enum TypeOfSensor {
}

enum TypeOfSensor {
-typeOfSensor : String
-measuringUnit : String
+TypeOfSensor(String, String)
+getTypeOfSensor() : String
+getMeasuringUnit() : String
+getTypeAndMeasuringUnit() : String
}

interface Sensor {
+getName() : String
+getReading() : Value
+getTypeOfSensor() : TypeOfSensor
}

class HumiditySensor {
+sensorName : String
+actualType : TypeOfSensor
+currentRH : Value
+HumiditySensor(String)
-isValidHumiditySensorName(String) : boolean
+getName() : String
+getTypeOfSensor() : TypeOfSensor
+getReading() : Value
}

interface Value {
+toValue() : String
}

class HumidityValue {
+humidityValue : int
+HumidityValue()
+getHumidityValue() : int
+toValue() : String
}

Sensor <|.. HumiditySensor : implements
HumiditySensor"0..* " --> "1"HumidityValue : has
HumidityValue ..|> Value : implements
HumiditySensor"1 " --> "1"TypeOfSensor : is a

@enduml